fix bug with cards gap

--- a/frontend/src/blocks/elements/elements.css
+++ b/frontend/src/blocks/elements/elements.css
@@ -3,6 +3,7 @@
   min-height: 762px;
   display: flex;
   flex-wrap: wrap;
+  gap: 17px;
   justify-content: space-around;
 }
 
